--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 					<p>
                         <a href="mailto:richard.lee@europe.com">richard.lee@europe.com</a>
                     </p>
-                    <p>Mob: +447933-509-434</p>
-                    <p>Bucks U.K.x`</p>
+                                        <p>Bucks U.K.x`</p>
                     <p>
                         <a href="https://www.linkedin.com/in/richardlee2022/">Linkedin Profile</a>
                     </p>
                     <p>
-                        <a href="https://github.com/Puzl99">GitHub Profile</a>
+                        <img src="https://tryhackme-badges.s3.amazonaws.com/Puzl99.png" alt="TryHackMe">
                     </p>
 				</section>
 				<section>
