--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 		<title>RichLee</title>
 	</head>
 
 	<body>
 		<header id="header">
 		<!-- resume header with your name and title -->
-		<h1>Richard Lee (Rich) - he/him</h1>
+		<h1>RICHARD LEE</h1>
 			<hr>
 				Aspiring Cyber Intelligence Specialist.  
 			<hr>
@@ -17,15 +18,20 @@
 				<section>
 					<h2>CONTACT</h2>
 					<p>
+						<i class="fa fa-envelope" aria-hidden="true"></i>
                         <a href="mailto:richard.lee@europe.com">richard.lee@europe.com</a>
-                    </p>
-                                        <p>Bucks U.K.x`</p>
-                    <p>
+					</p>
+					<p>
+						<i class="fab fa-linkedin" aria-hidden="true"></i>
                         <a href="https://www.linkedin.com/in/richardlee2022/">Linkedin Profile</a>
                     </p>
-                    <p>
-                        <img src="https://tryhackme-badges.s3.amazonaws.com/Puzl99.png" alt="TryHackMe">
-                    </p>
+					<p>
+						<i class="fab fa-github" aria-hidden="true"></i>
+						<a href="github.com/Puzl99">GitHub</a>
+					</p>
+				</p>
+				<p>Bucks U.K.
+			</p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
@@ -35,16 +41,23 @@
 					<h2>EDUCATION</h2>
                     <h3>HNC Cyber Technologies, Networking and Cyber Security</h3>
 	<p>
-	    South Central Institute of Technology (Milton Keynes College)
+	    South Central Institute of Technology 
 	</p>
 	<p>
         2022/23
+	</p>
+	<p>
+		<script src="https://tryhackme.com/badge/1168802"></script>
 	</p>
 					<p>...</p>
 				</section>            
 			</article>
 			<article id="mainRight">
 				<section>
+					<h2>ABOUT</h2>
+					<p>A brief paragraph about you and what kind of job/company you are looking to work for.</p>
+				</section>
+			<section>
 					<h2>WORK EXPERIENCE</h2><h3>JOB TITLE</h3>
                     <p>
                         Company Name | 2008 - 2010
