--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	<body>
 		<header id="header">
 		<!-- resume header with your name and title -->
-		<h1>RICHARD LEE</h1>
+		<h1><b>RICHARD</b> LEE</h1>
 			<hr>
-				Aspiring Cyber Intelligence Specialist.  
+				Aspiring Pentester.  
 			<hr>
 		</header>
 		<main>
 			<article id="mainLeft">
 				<section>
-					<h2>CONTACT</h2>
+					<h2><B>CONTACT</B></h2>
 					<p>
 						<i class="fa fa-envelope" aria-hidden="true"></i>
                         <a href="mailto:richard.lee@europe.com">richard.lee@europe.com</a>
@@ -27,24 +27,25 @@
                     </p>
 					<p>
 						<i class="fab fa-github" aria-hidden="true"></i>
-						<a href="github.com/Puzl99">GitHub</a>
+						<a href="https://github.com/Puzl99">GitHub</a>
 					</p>
 				</p>
 				<p>Bucks U.K.
 			</p>
 				</section>
 				<section>
-					<h2>SKILLS</h2>
+					<h2><B>SKILLS</B></h2>
 					<p>HTML, GitHub...</p>
 				</section>
 				<section>
-					<h2>EDUCATION</h2>
+					<h2><B>EDUCATION</B></h2>
+					<h3>Cyber Security Prinicapls (Level:3)</h3>
                     <h3>HNC Cyber Technologies, Networking and Cyber Security</h3>
 	<p>
-	    South Central Institute of Technology 
+	    South Central Institute of Technology.
 	</p>
 	<p>
-        2022/23
+        September 2022 (finishing July 2023)
 	</p>
 	<p>
 		<script src="https://tryhackme.com/badge/1168802"></script>
@@ -54,13 +55,14 @@
 			</article>
 			<article id="mainRight">
 				<section>
-					<h2>ABOUT</h2>
-					<p>A brief paragraph about you and what kind of job/company you are looking to work for.</p>
+					<h2><B>ABOUT</B></h2>
+					<p>Obsessed Cloud Enthusiast building a Microsoft Azure home lab. Currently studying Cyber Security at University while maintaining an addiction to learning Cloud technologies. Plagued with the overwhelming urge to tinker, figure things out, and learn. 
+					</p>
 				</section>
 			<section>
-					<h2>WORK EXPERIENCE</h2><h3>JOB TITLE</h3>
+					<h2><B>WORK EXPERIENCE</B></h2><h3>JOB TITLE</h3>
                     <p>
-                        Company Name | 2008 - 2010
+                        Ocado Retail | 2015 - Present
                     </p>
                     <p>
                         Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
