--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<main>
 			<article id="mainLeft">
 				<section>
-					<h2><B>CONTACT</B></h2>
+					<h2>CONTACT</h2>
 					<p>
 						<i class="fa fa-envelope" aria-hidden="true"></i>
                         <a href="mailto:richard.lee@europe.com">richard.lee@europe.com</a>
@@ -34,11 +34,11 @@
 			</p>
 				</section>
 				<section>
-					<h2><B>SKILLS</B></h2>
+					<h2>SKILLS</h2>
 					<p>HTML, GitHub...</p>
 				</section>
 				<section>
-					<h2><B>EDUCATION</B></h2>
+					<h2>EDUCATION</h2>
 					<h3>Cyber Security Prinicapls (Level:3)</h3>
                     <h3>HNC Cyber Technologies, Networking and Cyber Security</h3>
 	<p>
@@ -56,17 +56,17 @@
 			</article>
 			<article id="mainRight">
 				<section>
-					<h2><B>ABOUT</B></h2>
+					<h2>ABOUT</h2>
 					<p>Obsessed Cloud Enthusiast building a Microsoft Azure home lab. Currently studying Cyber Security at University while maintaining an addiction to learning Cloud technologies. Plagued with the overwhelming urge to tinker, figure things out, and learn. 
 					</p>
 				</section>
 			<section>
-					<h2><B>WORK EXPERIENCE</B></h2><h3>JOB TITLE</h3>
+					<h2>WORK EXPERIENCE</h2><h3><b>JOB TITLE</b></h3>
                     <p>
                         Ocado Retail | 2015 - Present
                     </p>
                     <p>
-                        Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+                        Customer facing retail delivery.
                     </p>
                     <ul>
                         <li></li>
