--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- resume header with your name and title -->
 		<h1><b>RICHARD</b> LEE</h1>
 			<hr>
-				Aspiring Pentester.  
+				Aspiring Pentester
 			<hr>
 		</header>
 		<main>
@@ -29,29 +29,25 @@
 						<i class="fab fa-github" aria-hidden="true"></i>
 						<a href="https://github.com/Puzl99">GitHub</a>
 					</p>
-				</p>
-				<p>Bucks U.K.
-			</p>
+				<p>Bucks U.K.</p>
 				</section>
+				
 				<section>
 					<h2>SKILLS</h2>
 					<p>HTML, GitHub...</p>
 				</section>
+
 				<section>
 					<h2>EDUCATION</h2>
-					<h3>Cyber Security Prinicapls (Level:3)</h3>
-                    <h3>HNC Cyber Technologies, Networking and Cyber Security</h3>
-	<p>
-	    South Central Institute of Technology.
-	</p>
-	<p>
-        September 2022 (finishing July 2023)
-	</p>
+                    <h4><b>HNC Cyber Technologies, Networking and Cyber Security</b></h4>
+		    		South Central Institute of Technology.
+        			September 2022 (finishing July 2023)
 	<br>
+					<h4>Cyber Security Prinicapls (Level:3)</h4>
 	<p>
 		<script src="https://tryhackme.com/badge/1168802"></script>
 	</p>
-					<p>...</p>
+					
 				</section>            
 			</article>
 			<article id="mainRight">
