--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<h2>CONTACT</h2>	
 					<p>
 						<i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:richard.lee@europe.com">richard.lee@europe.com</a>
+                        <a href="mailto:rlee@europe.com">RLee@europe.com</a>
 					</p>
 					<p>
 						<i class="fab fa-linkedin" aria-hidden="true"></i>
